# LearnCMake

./: .clangd  .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
Learn001/: CMakeLists.txt  main.cpp
Learn001/output/: main
Learn002/: CMakeLists.txt  main.cpp
Learn002/src/: Library.cpp
Learn003/: CMakeLists.txt  main.cu
Learn004/: CMakeLists.txt  main.cu
Learn005/: CMakeLists.txt  main.cu
Learn006/: CMakeLists.txt  main.cu
Learn007/: CMakeLists.txt  main.cpp
Learn007/include/: Library.h
Learn008/: CMakeLists.txt  main.cu
Learn009/: CMakeLists.txt  camera.h  hitable.h  hitable_list.h  main.cu  material.h  ray.h  sphere.h  vec3.h
Learn010/: CMakeLists.txt  main.cu
LearnECS/: CMakeLists.txt  main.cpp
LearnECS/include/: esc.hpp  sparse_set.hpp
